2009-04-01
	* gselect.list has two new argument: width and height.

2009-03-28
	* new function of RQDA2tm (contributed by J-P Mueller).
	
2009-03-22
	* add memo of attributes table.

2009-03-21
	* Another critical bugfix of CaseAttrFun() and FileAttrFun().
	* View variables of case/file.
	* change version number to 0.1-7.
	
2009-03-20
	* Find a word and highlight it in the open file (via popup menu in File Tab).
	* critical bugfix of CaseAttrFun() and FileAttrFun().
	* fix bug of "add files..." to case popup menu.

2009-03-19
	* Add/modify File/Case attributes from popup menu.
	
2009-03-18
	* upgrade databaseversion to "0.1.6" (three tables are added for attributes by UpgradeTables()).
	* Attrs Tab for case/file attributes.
	* fix some minor bugs.

2009-03-17
	* Variable/Attributes of Case.
	* Improvement of mark case button.
	* The default order of case is alphabetical,that is sort(case).
	
2009-03-16
	* The default order of codes is alphabetical.
	* minor bug of "Add" buttons.
	* minor modification of OpenProjectButton() to make it more informative.

2009-03-12
	* Fix minor bug of "Search File..." of popup menu in File Tab.

2009-03-11
	* New function of AddNewFileFun, Add new file from popup menu of file Tab.
	* Fix minor bug of enc().
	* Show files with/without memo only (from popup menu of file tab).
	* Show codes with/without memo only (from popup menu of code tab).

2009-01-14
	* Add citation file.
	
2009-01-09
	* Add namespace
	* RQDA-internal.rd is no loner needed (can be found in rev 57 or version 0.1-6)
	
2008-12-28 (as 0.1.6, submitted to CRAN)
	* RQDA needs gWidgets (>= 0.0-31), gWidgetsRGtk2 (>= 0.0-36). Add it to DESCRIPTION file.
	
2008-12-24
	* Fix minor bugs of "Unmark", "AddTo", and "HL_ALL" buttons.
	* add new content to documentation.html.
	
2008-12-21
	* Fix latex related issue in SearchFiles.rd.
	* Fix bug of C2Info: encoding issue.
	* Add new content to documentation.html.
	
2008-12-18 (as version 0.1.6RC3)
	* Rename CrossTable to CrossTwo