@@ -1,3 +1,8 @@
+2009-04-06
+	* Minor bugfix of write.FileList() which is caused by change of enc().
+	* Minor bugfixes of AddTo buttons in C-cat and F-cat Tabs.
+	* gselect.list() is documented and exported.
+	
 2009-04-01
 	* gselect.list has two new argument: width and height.
 
